<resources>
    <string name="app_name">UdacityForum</string>
    <string name="login_screen">login screen</string>
    <string name="username">Username</string>
    <string name="full_name">Full name</string>
    <string name="email_id">Email id</string>
    <string name="password">Password</string>
    <string name="emailid_2">Email Id</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="home_page">Go to home page!</string>

    <!--Side Menu-->
    <string name="home">Home</string>
    <string name="course">Courses</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>

    <!--View Pager-->
    <string name="skip">Skip</string>
    <string name="done">Done</string>

    <!--OptionMenu-->
    <string name="New">New</string>
    <string name="top">Top</string>
    <string name="unread">Unread</string>
    <string name="badges">Badges</string>

    <!--SearchIcon-->
    <string name="search">Search</string>


    <!--Home Activity-->
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="activity_name">Home Activity</string>
    <string name="contact_no">1234567890</string>
    <string name="courses">Courses</string>
    <string name="discussion_form">Discussion Forum</string>
    <string name="user_panel">User Panel</string>
    <string name="question">New Question</string>
    <string name="register">Register</string>

    <string name="title_activity_userpanel">activity_userpanel</string>
    <string name="tab_text_1">Summary</string>
    <string name="tab_text_2">Activity</string>
    <string name="tab_text_3">Notifications</string>
    <string name="tab_text_4">Preferences</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="user_activity">User Activity</string>
    <string name="user_summary">User Summary</string>
    <string name="user_preferences">User preferences</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">163843787646025</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb163843787646025</string>


    <string name="enter_your_question_please">Enter Your Question\, Please</string>
    <string name="course_code">Course code</string>
    <string name="type_title_or_paste_a_link">Type title or paste a link</string>
    <string name="details">Type here\n\nPlease provide additional details\nabout your question\n\nThat will help mentor answer your\nquestion.</string>


</resources>
