<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_new"
        android:title="@string/New"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_top"
        android:title="@string/top"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_unread"
        android:icon="@android:drawable/btn_minus"
        android:title="@string/unread"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_badges"
        android:icon="@android:drawable/btn_minus"
        android:title="@string/badges"
        app:showAsAction="never" />

</menu>