<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".UserPanelActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="12dp"
                    android:id="@+id/view2"
                    app:cardCornerRadius="40dp"
                    android:innerRadius="0dp"
                    android:shape="ring"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="20dp"
                    android:thicknessRatio="1.9">
                    <ImageButton
                        android:layout_height="80dp"
                        android:layout_width="80dp"
                        android:id="@+id/imageButton"
                        android:background="@null"
                        >
                    </ImageButton>


                </android.support.v7.widget.CardView>



                <ImageButton
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignBottom="@+id/view2"
                    android:layout_alignEnd="@+id/view2"
                    android:adjustViewBounds="false"
                    android:scaleType="centerCrop"
                    android:background="@drawable/camera"
                    android:elevation="5dp"
                    android:id="@+id/fab11"/>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="29dp"
                    android:layout_alignTop="@+id/view2"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="4dp"
                    android:layout_toRightOf="@+id/view2"
                    android:text="@string/username"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignBottom="@+id/view2"
                    android:layout_alignStart="@+id/textView"

                    android:text="Name"
                    android:textSize="14sp" />




            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="scrollable"
            >

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_1"
                />


            <android.support.design.widget.TabItem
                android:id="@+id/tabItem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_2"
                />


            <android.support.design.widget.TabItem
                android:id="@+id/tabItem3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_3"
                />


            <android.support.design.widget.TabItem
                android:id="@+id/tabItem4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_4"
               />


        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />



</android.support.design.widget.CoordinatorLayout>