<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.udacityforum.MainActivity">

    <RelativeLayout
        android:id="@+id/rl_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                layout="@layout/app_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/bottom_nav_drawer"
            android:layout_below="@id/ll_header"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_course"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_50"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                android:layout_marginTop="@dimen/fontSize_20"
                android:background="@color/amber_500"
                android:text="@string/courses"
                android:textColor="@color/cyan_A700"
                android:textSize="@dimen/fontSize_20" />

            <Button
                android:id="@+id/btn_forum"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_50"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                android:layout_marginTop="@dimen/fontSize_20"
                android:background="@color/amber_500"
                android:text="@string/discussion_form"
                android:textColor="@color/cyan_A700"
                android:textSize="@dimen/fontSize_20" />

            <Button
                android:id="@+id/user_panel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_50"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                android:layout_marginTop="@dimen/fontSize_20"
                android:background="@color/amber_500"
                android:text="@string/user_panel"
                android:textColor="@color/cyan_A700"
                android:textSize="@dimen/fontSize_20" />


        </LinearLayout>

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/bottom_nav_drawer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_60"
            android:layout_alignParentBottom="true"
            android:background="?android:attr/windowBackground"
            app:menu="@menu/bottom_nav_menu">

        </android.support.design.widget.BottomNavigationView>

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_drawer"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorPrimary"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/side_menu">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
